# pkl-github-action-step-generator

./: .gitignore  Pipfile  README.md  action.pkl  build.pkl  cli.py  constraints.yml  main.py  requirements.txt  setup.cfg
.github/workflows/: build.yml  test.yml
pkl_github_action_step_generator/: __init__.py  action_parser.py  core.py  pkl_generator.py
pkl_github_action_step_generator/templates/: action.pkl.jinja
pkl_github_actions_step_generator/: action_parser.py  cli.py  core.py  pkl_generator.py
src/: __init__.py
test/: test_action.yml
tests/: test_cli.py  test_pklproj.py
tests/fixtures/: action.pkl  action_constraints.pkl  action_deprecated.pkl  action_non_nullable.pkl  action_non_nullable.yml  action_nullable.pkl  test.PklProject
