[metadata]
name = pkl_github_actions_step_generator
version = 0.1.0
author = Emily McLean
author_email = emilymcleandeveloper@gmail.com
description = A simple CLI tool to generate a Pkl definition for a given action
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emilymclean/pkl-github-actions-step-generator
license = MIT
keywords = cli
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    pkl-github-actions-step-generator = cli:main